--- a/logica-matematica/logica-matematica.tex
+++ b/logica-matematica/logica-matematica.tex
@@ -214,7 +214,7 @@ numbered=no
 \newcommand{\B}{\mathbb{B}}
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\traza}{traza}
-\renewcommand{\P}{\mathcal{P}}
+\renewcommand{\P}{\mathbb{P}}
 \renewcommand{\S}{\mathbb{S}}
 \newcommand{\ZnZ}{\mathbb{Z}/n\mathbb{Z}}
 \newcommand{\ZmZ}{\mathbb{Z}/m\mathbb{Z}}
@@ -235,6 +235,7 @@ numbered=no
 \newcommand{\quo}[2]{{\left.\raisebox{.2em}{$#1$}\middle/\raisebox{-.2em}{$#2$}\right.}}
 \newcommand{\quox}[1]{\quo{#1}{x}}
 \newcommand{\implied}{\ \Longleftarrow\ }
+\newcommand{\vabs}[1]{\left|#1\right|}
 %%%% MATRICES
 \newcommand\mx[1]{\begin{bmatrix*}#1\end{bmatrix*}}
 
@@ -275,6 +276,10 @@ Revisión del \today $ $ a las \currenttime.
 \input{input/9-validez}
 \part{Completitud de la l\'ogica de primer orden}
 \input{input/10-teorias-completas-lindembaun}
+\input{input/11-testigos-henkin}
+\input{input/12-completitud}
+\input{input/13-compacidad}
+\input{input/14-corolarios-compacidad}
 \part{Ap\'{e}ndices}
 
 %\renewcommand{\chaptername}{Apéndice}
