--- a/compleja/compleja.tex
+++ b/compleja/compleja.tex
@@ -204,6 +204,7 @@ numbered=no
 \renewcommand{\exp}[1]{\mathrm{exp}(#1)}
 \newcommand{\mcm}[1]{\mathrm{mcm}\sdf{#1}}
 \newcommand{\mtc}[1]{\mathcal{#1}}
+\newcommand{\Arg}{\mathrm{Arg}}
 %\DeclareMathSymbol{\varprod}{\mathop}{largesymbolsA}{16}
 
 \newcommand{\hr}{\rule{\textwidth}{.4pt}}
