--- a/compleja/compleja.tex
+++ b/compleja/compleja.tex
@@ -243,6 +243,8 @@ numbered=no
     \end{center}
 }
 
+\newcommand{\bfrac}[2]{\left(\frac{#1}{#2}\right)}
+
 %%%% MATRICES
 \newcommand\mx[1]{\begin{bmatrix*}#1\end{bmatrix*}}
 
