--- a/modelizacion/modelizacion.tex
+++ b/modelizacion/modelizacion.tex
@@ -246,6 +246,8 @@ numbered=no
     \end{center}
 }
 
+\newcommand{\bfrac}[2]{\left(\frac{#1}{#2}\right)}
+
 %%%% MATRICES
 \newcommand\mx[1]{\begin{bmatrix*}#1\end{bmatrix*}}
 \newcommand\dmx[1]{\begin{pmatrix*}#1\end{pmatrix*}}
