--- a/compleja/input/1-numeros-complejos.tex
+++ b/compleja/input/1-numeros-complejos.tex
@@ -271,7 +271,7 @@ que es un sistema resoluble, sin embargo la expresión no es nada agradable. Usa
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 03/02
     Gracias a esta forma de calcular las raíces de un número complejo, podemos calcular lo que se conoce como \textit{raíces de la unidad}, que serán útiles a lo largo del curso, de esta forma, si $z^n = 1$, entonces:
     $$
-        z = (\cos \bfrac{2\pi k}{n} + i\sin \bfrac{2\pik}{n}),\ k=0, \ldots, 1
+        z = (\cos \pfrac{2\pi k}{n} + i\sin \pfrac{2\pik}{n}),\ k=0, \ldots, 1
     $$
     Que tienen una representación geométrica sobre el círculo unidad.
 
