--- a/modelizacion/input/1-analisis-dimensional.tex
+++ b/modelizacion/input/1-analisis-dimensional.tex
@@ -341,8 +341,8 @@ Hallar magnitudes adimensionales en los distintos problemas nos ayuda a simplifi
         \end{align*}
         y entonces:
         \begin{align*}
-            \dot{\bar h}(\bar t) &= \pd{\bar h}{\bar t}(\bar t) = \Pd{\bar t}\bfrac{h(t_C\bar t)}{h_C} = \frac{t_C}{h_C} h'(t_C \bar t)\\
-            \ddot{\bar h}(\bar t) &= \Pd{\bar t}\bfrac{t_C h'(t_C \bar t)}{h_C} = \frac{t_C^2}{h_C} h''(t_C \bar t)\\
+            \dot{\bar h}(\bar t) &= \pd{\bar h}{\bar t}(\bar t) = \Pd{\bar t}\pfrac{h(t_C\bar t)}{h_C} = \frac{t_C}{h_C} h'(t_C \bar t)\\
+            \ddot{\bar h}(\bar t) &= \Pd{\bar t}\pfrac{t_C h'(t_C \bar t)}{h_C} = \frac{t_C^2}{h_C} h''(t_C \bar t)\\
             \bar h (0) &= 0\\
             \dot{\bar h}(0) &= \frac{t_C}{h_C} h'(0) = \frac{t_C}{h_C} v\\
         \end{align*}
@@ -394,7 +394,7 @@ Hallar magnitudes adimensionales en los distintos problemas nos ayuda a simplifi
             De este obtenemos:
             \begin{align*}
                 \dot{\bar {h}} (0) &= \frac{ \frac{v}{g}  }{ \frac{v^2}{g} } = 1\\
-                \frac{ \frac{v^2}{g}  }{ \bfrac{v}{g}^2 } \ddot{\bar h}(t) &= -\frac{gR^2}{\left(\frac{v^2}{g}\bar h + R\right)^2}\\
+                \frac{ \frac{v^2}{g}  }{ \pfrac{v}{g}^2 } \ddot{\bar h}(t) &= -\frac{gR^2}{\left(\frac{v^2}{g}\bar h + R\right)^2}\\
                 \ddot{\bar h}(t) &= - \frac{1}{\left( \frac{v^2}{gR} \bar h + 1 \right)}
             \end{align*}
             y con este resultado hallamos el sistema:
@@ -412,7 +412,7 @@ Hallar magnitudes adimensionales en los distintos problemas nos ayuda a simplifi
             También hallamos:
             \begin{align*}
                 h(\bar t) &= - \frac{\bar t^2}{2} + \bar t\\
-                \frac{h(t_C \bar t)}{h_C} &= -\frac{1}{2}\bfrac{t}{t_C}^2 + \bfrac{t}{t_C}\\
+                \frac{h(t_C \bar t)}{h_C} &= -\frac{1}{2}\pfrac{t}{t_C}^2 + \pfrac{t}{t_C}\\
                 h(t) &= - \frac{h_C}{2t_C^2}t^2 + \frac{h_Ct}{t_C}\\
                 h(t) &= - \frac{\sfrac{v^2}{g}}{2 \left( \sfrac{v}{g} \right)^2}t^2 + \frac{\sfrac{v^2}{g}}{\sfrac{v}{g}}t = -g\frac{t^2}{2} + vt
             \end{align*}
