--- a/modelizacion/modelizacion.tex
+++ b/modelizacion/modelizacion.tex
@@ -246,7 +246,7 @@ numbered=no
     \end{center}
 }
 
-\newcommand{\bfrac}[2]{\left(\frac{#1}{#2}\right)}
+\newcommand{\pfrac}[2]{\left(\frac{#1}{#2}\right)}
 
 %%%% MATRICES
 \newcommand\mx[1]{\begin{bmatrix*}#1\end{bmatrix*}}
